<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang_di_warok_droid"
                android:textColor="#FFF"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/content_desc"
                android:textColor="#FFF"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/selengkapnya"
                    android:textColor="#FFF"
                    android:background="@drawable/button_style_one"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/gabung_sekarang"
                    android:textColor="#FFF"
                    android:background="@drawable/button_style_two"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"/>
            
            <Button
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/login"
                android:textColor="#FFF"
                android:background="@drawable/button_style_one"
                android:drawableRight="@drawable/ic_send_white_24dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>